Added between operator (#6)
Co-authored-by: anttorre <antonio.torre@everis.com>